--- a/index.html
+++ b/index.html
@@ -1,44 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/styles.css">
-    <title>Calculadora</title>
-    <header>
-        <p>Bienvenido a mi calculadora :D</p>
-    </header>
-</head>
-<body>
-    <div class="calculadora">
-        <input type="text" readonly id="pantalla">
-        <div class="botones">
-            <button onclick="agregarCaracter('7')">7</button>
-            <button onclick="agregarCaracter('8')">8</button>
-            <button onclick="agregarCaracter('9')">9</button>
-            <button onclick="agregarCaracter('/')">/</button>
-            <button onclick="agregarCaracter('4')">4</button>
-            <button onclick="agregarCaracter('5')">5</button>
-            <button onclick="agregarCaracter('6')">6</button>
-            <button onclick="agregarCaracter('*')">*</button>
-            <button onclick="agregarCaracter('1')">1</button>
-            <button onclick="agregarCaracter('2')">2</button>
-            <button onclick="agregarCaracter('3')">3</button>
-            <button onclick="agregarCaracter('-')">-</button>
-            <button onclick="agregarCaracter('0')">0</button>
-            <button onclick="agregarCaracter('.')">.</button>
-            <button onclick="calcular()">=</button>
-            <button onclick="agregarCaracter('+')">+</button>
-            <button onclick="limpiarPantalla()">C</button>
-        </div>
-    </div>
-    <script src="/assets/logica.js"></script>
+    <link rel="stylesheet" href="./assets/styles.css" </head>
 
-    <footer>
-        <p>©Pedro José Lopez Hernández
-            KINAL 2024
-        </p>
-        
-    </footer>
+<body>
+    <div class="containter">
+        <form id="miformulario">
+            <label for="nombre">Nombre:</label>
+            <input type="text" required>
+            <button type="button" onclick="enviarDatos()">Enviar</button>
+        </form>
+        <p id="mensaje" class="oculto"></p>
+    </div>
+    <script src="./assets/logica.js"></script>
 </body>
+
 </html>
