Subiendo archivos actualizados

--- a/tecnos.html
+++ b/tecnos.html
@@ -2,7 +2,7 @@
     <h2>Lenguajes que manejo</h2>
     <p>Estos son los lenguajes que he utilizado y manejo a nivel básico</p>
     <ul class="lenguajes-lista">
-        <link rel="stylesheet" href="style7.css">
+        <link rel="stylesheet" href="./styles/style7.css">
         <li>
             <h3>JavaScript</h3>
             <p>Un lenguaje de programación versátil para desarrollo web.</p>
