--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
                 <a class="logo">Portafolio</a>
                 <input type="checkbox" id="menu" />
                 <label for="menu">
-                    <img src="img/menu.png" class="menu-icono" alt="">
+                    <img src="./img/menu.png" class="menu-icono" alt="">
                 </label>
                 <nav class="navbar">
                     <ul>
