--- a/multimedia.html
+++ b/multimedia.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evil Jordan - Playboi Carti</title>
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="./styles/style3.css">
 </head>
 <body>
 
