--- a/proyecto2.html
+++ b/proyecto2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 2</title>
-    <link rel="stylesheet" href="style6.css">
+    <link rel="stylesheet" href="./styles/style6.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
