--- a/sobremi.html
+++ b/sobremi.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Sobre Mí</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="./styles/style2.css">
 </head>
-<body>
+<body >
     <section class="box">
-        <img src="img/yopis.png" width="180" alt="" class="box-img">
+        <img src="./img/yopis.png" width="180" alt="" class="box-img">
         <h1>Acerca de mi</h1>
         <h2>Web Developer</h2>
         <p>Soy Pedro José López Hernández, un estudiante entusiasta de la informática inmerso en la emocionante travesía de convertirme en perito en esta disciplina.
